Implementada area de texto que apresenta os dados do grafico

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,10 @@
-*.class
-
+/EspectroFotometroView$1.class
+/EspectroFotometroView$10.class
+/EspectroFotometroView$2.class
+/EspectroFotometroView$3.class
+/EspectroFotometroView$4.class
+/EspectroFotometroView$5.class
+/EspectroFotometroView$6.class
+/EspectroFotometroView$7.class
+/EspectroFotometroView$8.class
+/EspectroFotometroView$9.class
